--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,10 @@
+openmediavault (3.0.14) stable; urgency=low
+
+  * Various improvements.
+  * Fix bug in the FileSystemMgmt::delete RPC.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Fri, 26 Feb 2016 11:53:00 +0100
+
 openmediavault (3.0.13) stable; urgency=low
 
   * Update locales.
@@ -121,6 +128,12 @@ openmediavault (3.0) stable; urgency=low
   * Adapt package to Debian 8 (Jessie).
 
  -- Volker Theile <volker.theile@openmediavault.org>  Mon, 30 Nov 2015 15:53:40 +0100
+
+openmediavault (2.2.2) stable; urgency=low
+
+  * Fix bug in the FileSystemMgmt::delete RPC.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Fri, 26 Feb 2016 11:53:21 +0100
 
 openmediavault (2.2.1) stable; urgency=low
 
