--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (2.2.2) stable; urgency=low
+
+  * Fix bug in the FileSystemMgmt::delete RPC.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Fri, 26 Feb 2016 11:53:21 +0100
+
 openmediavault (2.2.1) stable; urgency=low
 
   * Mantis 0001474: Cannot create a file system on a loop device.
